--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-reseditor",
-  "version": "1.0.1",
+  "version": "1.0.7",
   "author": "gaoxl",
   "keywords": [
     "component",
@@ -9,7 +9,7 @@
     "designer"
   ],
   "files": [
-    "client"
+    "dist"
   ],
   "main": "lib/index.js",
   "scripts": {
@@ -51,7 +51,8 @@
     "vue-cropper": "^0.4.9",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
-    "xe-utils": "^3.0.4"
+    "xe-utils": "^3.0.4",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -71,7 +72,6 @@
     "nodemon": "^1.19.4",
     "psd": "^3.2.0",
     "pug": "^2.0.3",
-    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
