--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-reseditor",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "author": "gaoxl",
   "keywords": [
     "component",
@@ -8,6 +8,7 @@
     "pc",
     "designer"
   ],
+  "private": false,
   "files": [
     "dist"
   ],
@@ -43,16 +44,17 @@
     "qrcode.vue": "^1.6.3",
     "radui": "^1.1.4",
     "redis": "^3.0.2",
+    "sass-loader": "^7.1.0",
     "tinymce": "^5.4.1",
     "vue": "^2.6.10",
     "vue-cli": "^2.9.6",
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror": "^4.0.6",
     "vue-cropper": "^0.4.9",
+    "vue-loader": "^15.2.4",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
-    "xe-utils": "^3.0.4",
-    "sass-loader": "^7.1.0"
+    "xe-utils": "^3.0.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
