--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-reseditor",
-  "version": "1.0.125",
+  "version": "1.0.126",
   "author": "gaoxl",
   "keywords": [
     "component",
@@ -50,6 +50,7 @@
     "vue-cropper": "^0.4.9",
     "vue-loader": "^15.2.4",
     "vue-router": "^3.0.3",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.0.1",
     "xe-utils": "^3.0.4"
   },
