--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-reseditor",
-  "version": "1.0.136",
+  "version": "1.0.138",
   "author": "gaoxl",
   "keywords": [
     "component",
@@ -33,12 +33,12 @@
     "dom-to-image": "^2.6.0",
     "element-ui": "^2.12.0",
     "html2canvas": "^1.0.0-rc.7",
+    "jsbarcode": "^3.11.3",
     "kindeditor": "^4.1.10",
     "lodash": "^4.17.15",
     "node-sass": "^4.9.0",
     "node-schedule": "^1.3.2",
     "nprogress": "^0.2.0",
-    "qrcode.vue": "^1.6.3",
     "radui": "^1.1.4",
     "redis": "^3.0.2",
     "sass-loader": "^7.1.0",
@@ -49,6 +49,7 @@
     "vue-codemirror": "^4.0.6",
     "vue-cropper": "^0.4.9",
     "vue-loader": "^15.2.4",
+    "vue-qr": "^2.3.0",
     "vue-router": "^3.0.3",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.0.1",
